--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
- "name": "TeleBot - UserBot",
+ "name": "Night-wolf - UserBot",
  "description": "An advanced Telethon Userbot, from @TeleBotSupport",
- "logo": "https://telegra.ph/file/34b810002e7a3ee86a21e.png",
+ "logo": "https://telegra.ph/file/74d3935d0b6f9a48764b2.jpg",
  "keywords": [
   "telegram",
   "userbot",
