--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
  "name": "Night-wolf - UserBot",
- "description": "An advanced Telethon Userbot, from @TeleBotSupport",
+ "description": "An advanced Telethon Userbot, by @Xark047",
  "logo": "https://telegra.ph/file/74d3935d0b6f9a48764b2.jpg",
  "keywords": [
   "telegram",
